fixed too long titles

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -64,9 +64,11 @@ img {
 }
 
 h5 {
+  width: 98%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-align: center;
 }
 
 @media only screen and (max-width: 1024px) {
